# mofa-marscode

./: .gitignore  LICENSE  README.md  README_CHINESE.md  README_zh.md
python/: README.md  README_zh.md  requirements.txt  setup.py
python/MoFA_marscode/: .gitignore  start_marscode.sh  stop_marscode.sh
python/MoFA_marscode/shopping_agents/: .gitignore  README.md  README_zh.md  shopping_dataflow.yml
python/MoFA_marscode/shopping_agents/hitl-agent/: README.md  pyproject.toml
python/MoFA_marscode/shopping_agents/hitl-agent/hitl_agent/: main.py  main_cmd.py  main_ui.py
python/MoFA_marscode/ui/: client.py  socket_client.py  streamlit_demo.py
python/agent-hub/agent-template/: README.md  pyproject.toml
python/agent-hub/agent-template/agent_template/configs/: agent.yml
python/agent-hub/agent-template/agent_template/scripts/: agent.py
python/berkeley-hackathon/hello_world/: hello_world_dataflow.yml
python/berkeley-hackathon/hitl/: .env  .gitignore  hitl.py  prompt.py
python/berkeley-hackathon/shopping/: .gitignore  amazon.py  bestbuy.py  bronners_chrismas_wonderland.py  demo.py  jd.py  product_analysis_agent.py  scraper.py  search.py  structure.py  util.py
python/berkeley-hackathon/shopping_agents/: .gitignore  README.md  shopping_dataflow-graph.1.html  shopping_dataflow-graph.html  shopping_dataflow.yml
python/berkeley-hackathon/ui/: server.py  socket_client.py  socket_server.py
python/documents/berkeley-hackathon/: Core-code-developer-task.md  DEPLOY.md  DEPLOY.sh  Planning-Agent-developer-task.md  Shopping-code-developer.md  Task-Distribution.md  (+1 more)
(+88 files in other folders)
