[tool.poetry]
name = "agent-template"
version = "0.3.5"
authors = [
    "ZhongHuan Wu ",
    "Cheng Chen",
]
description = "Dora Beauty Context"
license = "MIT License"
homepage = "https://github.com/dora-rs/dora.git"
documentation = "https://github.com/dora-rs/dora/blob/main/node-hub/terminal-input/README.md"
readme = "README.md"
packages = [{ include = "beauty_context" }]

[tool.poetry.dependencies]
numpy = "< 2.0.0"
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
agent-template = "beauty_context.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
readme = "README.md"
